--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/global/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -12,7 +12,12 @@
     <title>Alura Geek</title>
 </head>
 <body>
-    <h1>Bem vindo(a) ao Alura Geek!</h1>
-    <script src="script.js"></script>
+    <header>
+        <div class="logo">
+            <img src="./assets/alura-geek-logo.png" alt="logo">
+            <p class="logo__titulo">Alura Geek</p>
+        </div>
+    </header>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
