--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <p class="logo__titulo">Alura Geek</p>
         </div>
     </header>
+    <main>
+        <section class="products__section"></section>
+        <section class="form__section"></section>
+    </main>
     <script src="./scripts/script.js"></script>
 </body>
 </html>
