Adicionado estilo da seção de produtos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@
         </div>
     </header>
     <main>
-        <section class="products__section"></section>
+        <section class="products__section">
+            <h2 class="products__title">MEUS PRODUTOS:</h2>
+            <ul class="products__container">
+                <li class="products__item">Produto 1</li>
+                <li class="products__item">Produto 2</li>
+                <li class="products__item">Produto 3</li>
+                <li class="products__item">Produto 4</li>
+                <li class="products__item">Produto 5</li>
+                <li class="products__item">Produto 6</li>
+                <li class="products__item">Produto 7</li>
+                <li class="products__item">Produto 8</li>
+                <li class="products__item">Produto 9</li>
+            </ul>
+        </section>
         <section class="form__section"></section>
     </main>
     <script src="./scripts/script.js"></script>
