Adicionado model, api, utilitarios, package, gitignore e atualizado readme

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         </section>
         <section class="form__section"></section>
     </main>
-    <script src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/script.js"></script>
 </body>
 </html>
