Adicionado elemento de cards de produtos

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="./styles/global/style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&family=Press+Start+2P&display=swap" rel="stylesheet">
+    
 
     <title>Alura Geek</title>
 </head>
@@ -22,15 +24,18 @@
         <section class="products__section">
             <h2 class="products__title">MEUS PRODUTOS:</h2>
             <ul class="products__container">
-                <li class="products__item">Produto 1</li>
-                <li class="products__item">Produto 2</li>
-                <li class="products__item">Produto 3</li>
-                <li class="products__item">Produto 4</li>
-                <li class="products__item">Produto 5</li>
-                <li class="products__item">Produto 6</li>
-                <li class="products__item">Produto 7</li>
-                <li class="products__item">Produto 8</li>
-                <li class="products__item">Produto 9</li>
+                <li class="products__item">
+                    <div class="product__card">
+                        <img src="./assets/abacate.png" alt="Imagen do produto">
+                        <div class="product__card-container--info">
+                            <p>Nome do produto</p>
+                            <div class="product__card-container--value">
+                                <p>Precio: $XX.XX</p>
+                                <img src="./assets/trash.png" alt="Ícone de remover">
+                            </div>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </section>
         <section class="form__section"></section>
