Criado listagem dinamica de cards com javascript

--- a/index.html
+++ b/index.html
@@ -10,33 +10,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&family=Press+Start+2P&display=swap" rel="stylesheet">
     
+    <link rel="shortcut icon" href="./assets/alura-geek-logo.png" type="image/x-icon">
 
-    <title>Alura Geek</title>
+    <title>DuCampo</title>
 </head>
 <body>
     <header>
         <div class="logo">
             <img src="./assets/alura-geek-logo.png" alt="logo">
-            <p class="logo__titulo">Alura Geek</p>
+            <p class="logo__titulo">DuCampo</p>
         </div>
     </header>
     <main>
         <section class="products__section">
             <h2 class="products__title">MEUS PRODUTOS:</h2>
-            <ul class="products__container">
-                <li class="products__item">
-                    <div class="product__card">
-                        <img src="./assets/abacate.png" alt="Imagen do produto">
-                        <div class="product__card-container--info">
-                            <p>Nome do produto</p>
-                            <div class="product__card-container--value">
-                                <p>Precio: $XX.XX</p>
-                                <img src="./assets/trash.png" alt="Ícone de remover">
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+            <ul class="products__container"></ul>
         </section>
         <section class="form__section"></section>
     </main>
