--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="form__item">
                         <label for="imagem" class="form__label">Imagem</label>
-                        <img alt="imagem do produto" class="form__img" src="./assets/abacate.png">
+                        <img alt="imagem do produto" class="form__img" src="">
                         <input class="form__input" type="file" maxlength="1" accept="image/png, image/jpeg" id="imagem" name="imagem" required>
                         <span class="mensagem-erro"></span>
                     </div>
@@ -54,6 +54,18 @@
             </form>
         </section>
     </main>
+    <footer>
+        <div class="footer__logo">
+            <img src="./assets/alura-geek-logo.png" alt="logo" class="footer__img">
+            <h2 class="footer__title">DuCampo</h2>
+        </div>
+        <div class="footer__copy">
+            <p class="footer__copy__author">
+                DESENVOLVIDO POR <strong><a href="https://linkedin.com/in/ivanildoborges/" referrerpolicy="no-referr">IVANILDO BORGES</a></strong>
+            </p>
+            <p class="footer__copy__date">Oxi Ivan - <span class="footer__date">2024</span></p>
+        </div>
+    </footer>
     <script type="module" src="./scripts/script.js"></script>
 </body>
 </html>
