Adicionado estilo ao footer

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         </div>
         <div class="footer__copy">
             <p class="footer__copy__author">
-                DESENVOLVIDO POR <strong><a href="https://linkedin.com/in/ivanildoborges/" referrerpolicy="no-referr">IVANILDO BORGES</a></strong>
+                DESENVOLVIDO POR <strong><a href="https://linkedin.com/in/ivanildoborges/" referrerpolicy="no-referr" target="_blank">IVANILDO BORGES</a></strong>
             </p>
-            <p class="footer__copy__date">Oxi Ivan - <span class="footer__date">2024</span></p>
+            <p class="footer__copy__date">OXI IVAN - <span class="footer__date">2024</span></p>
         </div>
     </footer>
     <script type="module" src="./scripts/script.js"></script>
