--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
                         <span class="mensagem-erro"></span>
                     </div>
                     <div class="form__item">
-                        <label for="preco" class="form__label">Preço</label>
+                        <label for="preco" class="form__label">Preço (R$)</label>
                         <input class="form__input" type="number" id="preco" max="100000000" min="0.1" step="0.01" name="preco" placeholder="R$ 0.00" pattern="" required>
+                        <span class="mensagem-erro"></span>
+                    </div>
+                    <div class="form__item">
+                        <label for="quilo" class="form__label">Peso (Kg)</label>
+                        <input class="form__input" type="number" id="quilo" max="10000" min="0.1" step="0.01" name="quilo" placeholder="0,00" pattern="" required>
                         <span class="mensagem-erro"></span>
                     </div>
                     <div class="form__item">
