--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
             <form action="" method="post" id="form__product" class="form__product">
                 <h2 class="form__title">Adicionar produto</h2>
                 <fieldset class="form__group__items">
-                    <div class="form__item">
+                    <div class="form__item name">
                         <label for="nome" class="form__label">Nome</label>
                         <input class="form__input" autocomplete="off" type="text" id="nome" maxlength="50" name="nome" placeholder="produto..." required>
                         <span class="mensagem-erro"></span>
                     </div>
-                    <div class="form__item">
+                    <div class="form__item price">
                         <label for="preco" class="form__label">Preço (R$)</label>
                         <input class="form__input" type="number" id="preco" max="100000000" min="0.1" step="0.01" name="preco" placeholder="R$ 0.00" pattern="" required>
                         <span class="mensagem-erro"></span>
                     </div>
-                    <div class="form__item">
+                    <div class="form__item kilo">
                         <label for="quilo" class="form__label">Peso (Kg)</label>
                         <input class="form__input" type="number" id="quilo" max="10000" min="0.1" step="0.01" name="quilo" placeholder="0,00" pattern="" required>
                         <span class="mensagem-erro"></span>
                     </div>
-                    <div class="form__item">
+                    <div class="form__item img">
                         <label for="imagem" class="form__label">Imagem</label>
                         <img alt="imagem do produto" class="form__img" src="">
                         <input class="form__input" type="file" maxlength="1" accept="image/png, image/jpeg" id="imagem" name="imagem" required>
