--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <!-- base SEO -->
+    <meta name="description" content="e-commerce | agro | natural">
+    <!-- base PWA -->
+    <meta name="theme-color" content="#5D04D9"/>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./assets/alura-geek-logo.png" type="image/x-icon">
+    <!-- font CSS Local -->
     <link rel="stylesheet" href="./styles/global/style.css">
-
+    <!-- font CSS Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&family=Press+Start+2P&display=swap" rel="stylesheet">
-    
-    <link rel="shortcut icon" href="./assets/alura-geek-logo.png" type="image/x-icon">
-
+    <!-- nome do site -->
     <title>DuCampo</title>
 </head>
 <body>
