--- a/index.html
+++ b/index.html
@@ -36,23 +36,28 @@
                 <fieldset class="form__group__items">
                     <div class="form__item name">
                         <label for="nome" class="form__label">Nome</label>
-                        <input class="form__input" autocomplete="off" type="text" id="nome" maxlength="50" name="nome" placeholder="produto..." required>
+                        <input class="form__input" autocomplete="off" type="text" id="nome" maxlength="30" min="1" name="nome" placeholder="produto..." required>
                         <span class="mensagem-erro"></span>
                     </div>
                     <div class="form__item price">
                         <label for="preco" class="form__label">Preço (R$)</label>
-                        <input class="form__input" type="number" id="preco" max="100000000" min="0.1" step="0.01" name="preco" placeholder="R$ 0.00" pattern="" required>
+                        <input class="form__input" type="number" id="preco" max="100000000" min="0.1" maxlength="9" step="0.01" name="preco" placeholder="0,00" required>
                         <span class="mensagem-erro"></span>
                     </div>
                     <div class="form__item kilo">
                         <label for="quilo" class="form__label">Peso (Kg)</label>
-                        <input class="form__input" type="number" id="quilo" max="10000" min="0.1" step="0.01" name="quilo" placeholder="0,00" pattern="" required>
+                        <input class="form__input" type="number" id="quilo" max="10000" min="0.1" maxlength="5" step="0.01" name="quilo" placeholder="0,00" required>
                         <span class="mensagem-erro"></span>
                     </div>
                     <div class="form__item img">
                         <label for="imagem" class="form__label">Imagem</label>
                         <img alt="imagem do produto" class="form__img" src="">
                         <input class="form__input" type="file" maxlength="1" accept="image/png, image/jpeg" id="imagem" name="imagem" required>
+                        <span class="mensagem-erro"></span>
+                    </div>
+                    <div class="form__item identificator">
+                        <label for="identificator" class="form__label">ID</label>
+                        <input class="form__input" autocomplete="off" type="text" id="identificator" maxlength="100" min="6" name="identificator" placeholder="identificator..." value="" disabled>
                         <span class="mensagem-erro"></span>
                     </div>
                     <div class="form__buttons">
