--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
                 <fieldset class="form__group__items">
                     <div class="form__item name">
                         <label for="nome" class="form__label">Nome</label>
-                        <input class="form__input" autocomplete="off" type="text" id="nome" maxlength="30" min="1" name="nome" placeholder="produto..." required>
+                        <input class="form__input" autocomplete="off" type="text" id="nome" minlength="3" maxlength="50" name="nome" placeholder="produto..." required>
                         <span class="mensagem-erro"></span>
                     </div>
                     <div class="form__item price">
                         <label for="preco" class="form__label">Preço (R$)</label>
-                        <input class="form__input" type="number" id="preco" max="100000000" min="0.1" maxlength="9" step="0.01" name="preco" placeholder="0,00" required>
+                        <input class="form__input" type="number" id="preco" max="100000000" min="0,1" step="0.01" name="preco" placeholder="0,00" required>
                         <span class="mensagem-erro"></span>
                     </div>
                     <div class="form__item kilo">
                         <label for="quilo" class="form__label">Peso (Kg)</label>
-                        <input class="form__input" type="number" id="quilo" max="10000" min="0.1" maxlength="5" step="0.01" name="quilo" placeholder="0,00" required>
+                        <input class="form__input" type="number" id="quilo" max="10000" min="0,1" step="0.01" name="quilo" placeholder="0,00" required>
                         <span class="mensagem-erro"></span>
                     </div>
                     <div class="form__item img">
